# AudioTester

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/Oboe/: AudioEngine.cpp  AudioEngine.h  Player.cpp
app/Oboe/Player/: Data.h  core.h  load.h
app/Oboe/audio/: SoundRecording.cpp
app/native/: AudioTime.cpp  AudioTime.h  native.h
app/release/: output.json
app/src/androidTest/java/general/code/audiotester/: ExampleInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/general/code/audiotester/: MP.kt  MainActivity.kt  UpdatingTextView.kt
app/src/main/res/values/: strings.xml
app/src/release/: AndroidManifest.xml
app/src/test/java/general/code/audiotester/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
